--- a/weasel.custom.yaml
+++ b/weasel.custom.yaml
@@ -1,41 +1,58 @@
-# encoding: utf-8
-
 customization:
   distribution_code_name: Weasel
   distribution_version: 0.16.3
   generator: "Weasel::UIStyleSettings"
-  modified_time: "Fri Apr 18 20:13:06 2025"
+  modified_time: "Sun Apr 20 19:14:29 2025"
   rime_version: 1.11.2
 patch:
-  "preset_color_schemes/win11dark":
+  "preset_color_schemes/win11_dark":
+    author: Ray
     back_color: 0x2c2c2c
     border_color: 0x2c2c2c
+    candidate_back_color: 0x2c2c2c
     candidate_text_color: 0xc9c9c9
+    color_format: rgba
     comment_text_color: 0xc9c9c9
     hilited_back_color: 0x202020
     hilited_candidate_back_color: 0x202020
-    hilited_candidate_text_color: 0xf9f9f9
+    hilited_candidate_border_color: 0x202020
+    hilited_candidate_text_color: 0xffffff
     hilited_comment_text_color: 0xf9f9f9
     hilited_label_color: 0xf9f9f9
-    hilited_mark_color: 0x1f6feb
+    hilited_mark_color: 0xf38064
     hilited_text_color: 0xf9f9f9
     label_color: 0xc9c9c9
-    name: "Win11Dark"
+    name: "Win11／Dark"
     shadow_color: 0x16000000
     text_color: 0xc9c9c9
   style:
+    antialias_mode: default
+    ascii_tip_follow_cursor: false
+    candidate_abbreviate_length: 30
     capture_type: none
+    click_to_capture: false
     color_font: true
-    display_tray_icon: false #  示小 呛 图   
-    font_face: "Consolas, Segoe UI Emoji, Microsoft YaHei UI, Noto Color Emoji, LXGW WenKai GB Screen, SimSun, SimSun-ExtB, SimSun-ExtG, TH-Tshyn-P0, TH-Tshyn-P1, TH-Tshyn-P2, TH-Tshyn-P16"
-    label_font_face: "Microsoft YaHei UI"
+    color_scheme: win11_dark
     comment_font_face: "Microsoft YaHei UI"
-    inline_preedit: true
-    preedit_type: composition
+    comment_font_point: 13
+    display_tray_icon: false
+    enhanced_position: true
+    font_face: "Microsoft YaHei UI, Consolas, Segoe UI Emoji, Noto Color Emoji, LXGW WenKai GB Screen, SimSun, SimSun-ExtB, SimSun-ExtG, TH-Tshyn-P0, TH-Tshyn-P1, TH-Tshyn-P2, TH-Tshyn-P16"
+    font_point: 14
     fullscreen: false
     horizontal: true
-    vertical_auto_reverse: true
+    hover_type: none
+    inline_preedit: true
+    label_font_face: "Microsoft YaHei UI"
+    label_font_point: 14
     label_format: "%s"
+    layout: {align_type: center, baseline: 0, border_width: 0, candidate_spacing: 8, corner_radius: 5, hilite_padding: 2, hilite_spacing: 5, linespacing: 0, margin_x: 5, margin_y: 5, max_height: 600, max_width: 0, min_height: 0, min_width: 95, round_corner: 5, shadow_offset_x: 4, shadow_offset_y: 4, shadow_radius: 5, spacing: 10}
     mark_text: ""
-    layout: {align_type: center, border_width: 0, border_height: 0, candidate_spacing: 8, corner_radius: 5, hilite_padding: 2, hilite_spacing: 5, line_spacing: 8, margin_x: 5, margin_y: 5, min_height: 0, min_width: 95, round_corner: 5, shadow_offset_x: 4, shadow_offset_y: 4, shadow_radius: 5, enhanced_position: bool}
-  "style/color_scheme": win11dark
+    mouse_hover_ms: 0
+    paging_on_scroll: false
+    preedit_type: composition
+    vertical_auto_reverse: false
+    vertical_text: false
+    vertical_text_left_to_right: false
+    vertical_text_with_wrap: false
+  "style/color_scheme": win11_dark
