--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -2,17 +2,17 @@ customization:
   distribution_code_name: Weasel
   distribution_version: 0.16.3
   generator: "Rime::SwitcherSettings"
-  modified_time: "Sun Apr 20 06:59:11 2025"
+  modified_time: "Mon Apr 21 13:15:37 2025"
   rime_version: 1.11.2
 patch:
   "ascii_composer/good_old_caps_lock": true
   "ascii_composer/switch_key":
     Caps_Lock: clear
-    Shift_L: commit_code
-    Shift_R: commit_code
     Control_L: noop
     Control_R: noop
+    Shift_L: commit_code
+    Shift_R: commit_code
   "menu/page_size": 7
   schema_list:
-    - {schema: luna_pinyin_simp}
-    - {schema: wubi86}
+    - {schema: tiger}
+    - {schema: wanxiang}
